# CS-482

./: README.md
problem set[0]/: Problem Set [0].docx  Problem Set [0].odt
project[0]/1-tictactoe/: submission.json  test.board  test_output.board  testout.board
project[0]/1-tictactoe/src/: tictac.cc  tictac_turnin.cc
project[1]/helloworld/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
project[1]/spam_filter/: CMakeLists.txt  submission.json
project[1]/spam_filter/src/: spam_classify.cpp  spam_train.cpp
project[2]/: kf.py  sim.py  submission.json
project[3]/: car.py  submission.json
